--- a/src/components/profiles/MyWishlist.css
+++ b/src/components/profiles/MyWishlist.css
@@ -1,4 +1,4 @@
-General styling
+/* General styling */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -6,7 +6,6 @@ body {
   margin-top: 2rem;
   color: #333;
 }
-
 
 .home-page {
   padding: 20px;
@@ -28,7 +27,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
-  padding: 4rem;
+
   overflow: hidden; /* Ensure content stays within the card */
   justify-items: center;
 }
@@ -193,6 +192,8 @@ body {
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
 }
+
+
 
 
 .remove-from-wishlist-button {
