--- a/src/components/call/WebRTCVideoCall.css
+++ b/src/components/call/WebRTCVideoCall.css
@@ -158,3 +158,56 @@ justify-content: start;
     object-fit: contain; /* Ensure the video fits the full screen */
     border-radius: 0;
 }
+
+
+/* for mobile-screen video call */
+
+
+.c1-video-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+  }
+  
+  .c1-remote-video-wrapper,
+  .c1-local-video-wrapper {
+    width: 100%;
+    height: auto;
+    max-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  
+  .c1-remote-video,
+  .c1-local-video {
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+    max-height: 100vh;
+  }
+  
+  .c1-maximized {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .c1-maximized-remote {
+    height: 100vh;
+  }
+  
+  .c1-floating-local-video {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 20%;
+    height: auto;
+    max-height: 25vh;
+    border: 2px solid white;
+    border-radius: 8px;
+  }
